Phase 5: Observability — Prometheus metrics, OTel tracing, Grafana dashboard
New packages:
  internal/metrics/ — 9 Prometheus metrics registered with controller-runtime:
    infraagent_runs_total{agent,status}
    infraagent_run_duration_seconds{agent}
    infraagent_tokens_used_total{agent,model}
    infraagent_iterations_total{agent}
    infraagent_guardrail_blocks_total{agent,action}
    infraagent_findings_total{agent,severity}
    infraagent_escalations_total{agent,reason}
    infraagent_schedule_lag_seconds{agent}
    infraagent_active_runs

  internal/telemetry/ — OpenTelemetry tracing with OTLP gRPC exporter:
    Spans: agent.run (parent), agent.assemble, gen_ai.chat (GenAI conventions),
           agent.tool_call, agent.report
    Noop when no endpoint configured

Instrumented:
  runner — metrics emitted on run completion (status, duration, tokens, iterations,
           findings), guardrail blocks, escalations. OTel spans for LLM calls and
           tool executions. Active runs gauge.
  scheduler — schedule lag metric (delay between due time and trigger)
  cmd/main.go — OTel trace provider init with --otel-endpoint flag / env var,
                graceful shutdown

Helm chart:
  Grafana dashboard JSON (infraagent-overview) with fleet overview, per-agent
  drill-down, guardrails activity, scheduling lag, token distribution
  Dashboard ConfigMap with sidecar labels for auto-discovery
  OTel config in values.yaml (otel.enabled, otel.endpoint)
  ServiceMonitor already existed

152 tests pass (13 new: 7 metrics + 6 tracing).

--- a/charts/infraagent/templates/deployment.yaml
+++ b/charts/infraagent/templates/deployment.yaml
@@ -36,6 +36,9 @@ spec:
             - --leader-elect={{ .Values.leaderElection.enabled }}
             - --health-probe-bind-address=:{{ .Values.healthProbe.port }}
             - --metrics-bind-address=:{{ .Values.metrics.port }}
+            {{- if and .Values.otel.enabled .Values.otel.endpoint }}
+            - --otel-endpoint={{ .Values.otel.endpoint }}
+            {{- end }}
           ports:
             - name: metrics
               containerPort: {{ .Values.metrics.port }}
