Phase 11E: Observability integration
- Fix OTel resource schema version conflict (1.26.0 vs 1.24.0)
- Add --metrics-secure flag to Helm chart (default: false for HTTP scraping)
- Update ServiceMonitor template with configurable scheme + extra labels
- Grafana dashboard ConfigMap, Prometheus scraping, Tempo tracing all working

--- a/charts/infraagent/templates/deployment.yaml
+++ b/charts/infraagent/templates/deployment.yaml
@@ -36,6 +36,7 @@ spec:
             - --leader-elect={{ .Values.leaderElection.enabled }}
             - --health-probe-bind-address=:{{ .Values.healthProbe.port }}
             - --metrics-bind-address=:{{ .Values.metrics.port }}
+            - --metrics-secure={{ .Values.metrics.secure | default false }}
             {{- if and .Values.otel.enabled .Values.otel.endpoint }}
             - --otel-endpoint={{ .Values.otel.endpoint }}
             {{- end }}
