--- a/charts/infraagent/templates/servicemonitor.yaml
+++ b/charts/infraagent/templates/servicemonitor.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: {{ .Values.metrics.serviceMonitor.namespace | default .Release.Namespace }}
   labels:
     {{- include "infraagent.labels" . | nindent 4 }}
+    {{- range $key, $val := .Values.metrics.serviceMonitor.labels }}
+    {{ $key }}: {{ $val | quote }}
+    {{- end }}
 spec:
   selector:
     matchLabels:
@@ -14,4 +17,9 @@ spec:
   endpoints:
     - port: metrics
       interval: {{ .Values.metrics.serviceMonitor.interval }}
+      {{- if .Values.metrics.secure }}
+      scheme: https
+      tlsConfig:
+        insecureSkipVerify: true
+      {{- end }}
 {{- end }}
