--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -130,10 +130,54 @@ jobs:
           name: helm-chart
           path: /tmp/helm-packages/legator-${{ steps.version.outputs.version }}.tgz
 
+  build-cli:
+    name: Build CLI Binaries
+    runs-on: ubuntu-latest
+    needs: [test]
+    strategy:
+      matrix:
+        include:
+          - goos: linux
+            goarch: amd64
+          - goos: linux
+            goarch: arm64
+          - goos: darwin
+            goarch: amd64
+          - goos: darwin
+            goarch: arm64
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Extract version from tag
+        id: version
+        run: echo "version=${GITHUB_REF_NAME}" >> "$GITHUB_OUTPUT"
+
+      - name: Build CLI
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
+        run: |
+          BINARY_NAME=legator-${{ matrix.goos }}-${{ matrix.goarch }}
+          if [ "${{ matrix.goos }}" = "windows" ]; then
+            BINARY_NAME="${BINARY_NAME}.exe"
+          fi
+          go build -ldflags "-X main.version=${{ steps.version.outputs.version }} -X main.gitCommit=${{ github.sha }} -X main.buildDate=$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+            -o dist/${BINARY_NAME} ./cmd/legator/
+
+      - name: Upload CLI artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: legator-cli-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: dist/legator-*
+
   github-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [release-image, release-helm, sign-image]
+    needs: [release-image, release-helm, sign-image, build-cli]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -144,6 +188,13 @@ jobs:
         with:
           name: helm-chart
           path: /tmp/helm-packages/
+
+      - name: Download CLI artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: legator-cli-*
+          path: /tmp/cli-binaries/
+          merge-multiple: true
 
       - name: Extract version from tag
         id: version
@@ -199,6 +250,7 @@ jobs:
             - 📦 [Helm Chart](https://github.com/${{ github.repository }}/pkgs/container/legator%2Fcharts%2Flegator)
           files: |
             /tmp/helm-packages/legator-${{ steps.version.outputs.version }}.tgz
+            /tmp/cli-binaries/legator-*
           generate_release_notes: true
           make_latest: true
 
