fix: wire tool registry into engine, reclassify state/A2A tools as TierRead
- Engine was never given the tool registry, so ClassifiableTool overrides
  never ran. All tool classifications fell through to heuristic fallback.
- state.set/state.delete reclassified from TierServiceMutation to TierRead
  (writing agent's own state is internal bookkeeping, not external mutation)
- a2a.delegate/a2a.check_tasks now implement ClassifiableTool as TierRead
  (creating coordination events, not external mutations)
- Regenerated CRD manifests (adds approvalMode, approvalTimeout to schema)
- Updated RBAC role with all 7 CRD resources

This unblocks observe-level agents from using state and A2A tools.

--- a/config/crd/bases/legator.io_legatoragents.yaml
+++ b/config/crd/bases/legator.io_legatoragents.yaml
@@ -95,6 +95,24 @@ spec:
                     items:
                       type: string
                     type: array
+                  approvalMode:
+                    description: |-
+                      approvalMode controls how actions exceeding autonomy are handled.
+                      "none" (default): exceed → block.
+                      "mutation-gate": exceed → create ApprovalRequest, wait for decision.
+                      "plan-first": agent proposes plan, all mutations need approval.
+                      "every-action": every non-read action needs approval.
+                    enum:
+                    - none
+                    - mutation-gate
+                    - plan-first
+                    - every-action
+                    type: string
+                  approvalTimeout:
+                    default: 30m
+                    description: approvalTimeout is the duration to wait for an approval
+                      decision before expiring.
+                    type: string
                   autonomy:
                     default: observe
                     description: autonomy is the graduated autonomy level.
