feat(v0.9): add anomaly baseline detection pipeline

--- a/charts/legator/templates/rbac.yaml
+++ b/charts/legator/templates/rbac.yaml
@@ -14,6 +14,7 @@ rules:
       - modeltierconfigs
       - legatorruns
       - userpolicies
+      - agentevents
     verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
   - apiGroups: ["legator.io"]
     resources:
