--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -278,15 +278,35 @@ jobs:
       - name: Log in to GHCR
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
 
+      - name: Create image pull secret for kind cluster
+        run: |
+          kubectl create namespace legator-system --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create secret docker-registry ghcr-auth \
+            --namespace legator-system \
+            --docker-server=${{ env.REGISTRY }} \
+            --docker-username=${{ github.actor }} \
+            --docker-password=${{ secrets.GITHUB_TOKEN }} \
+            --dry-run=client -o yaml | kubectl apply -f -
+
       - name: Install operator via Helm
         run: |
           helm install legator charts/legator/ \
             --namespace legator-system --create-namespace \
             --set image.repository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} \
             --set image.tag=${{ github.ref_name }} \
+            --set imagePullSecrets[0].name=ghcr-auth \
             --set leaderElection.enabled=false \
             --skip-crds \
             --wait --timeout 120s
+
+      - name: Dump smoke-test diagnostics on failure
+        if: failure()
+        run: |
+          kubectl get pods -A -o wide || true
+          kubectl get events -A --sort-by=.lastTimestamp | tail -n 200 || true
+          kubectl describe deployment legator-controller -n legator-system || true
+          kubectl describe pods -n legator-system || true
+          kubectl logs -n legator-system deployment/legator-controller --all-containers=true --tail=200 || true
 
       - name: Verify controller running
         run: |
