ci: adjust test command and config regex

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
           cache-dependency-path: go.sum
 
       - name: Run tests
-        run: /usr/local/go/bin/go test ./...
+        run: go test ./...
 
   build:
     name: Build binaries
