--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,7 +11,7 @@ linters:
 
 issues:
   exclude-rules:
-    - path: '_test\\.go'
+    - path: '_test\.go'
       linters:
         - errcheck
         - govet
