--- a/docs/contracts/architecture-boundaries.yaml
+++ b/docs/contracts/architecture-boundaries.yaml
@@ -102,7 +102,7 @@ dependency_policy:
       rationale: Integrations use config, transport clients, and shared runtime utilities.
     - from: adapters-integrations
       to: core-domain
-      rationale: Transitional coupling: llm orchestration currently reads fleet/core projections.
+      rationale: "Transitional coupling: llm orchestration currently reads fleet/core projections."
 
     - from: platform-runtime
       to: core-domain
@@ -112,7 +112,7 @@ dependency_policy:
       rationale: Runtime wiring initializes integration adapters.
     - from: platform-runtime
       to: surfaces
-      rationale: Transitional coupling: discovery runtime currently imports registration API helpers.
+      rationale: "Transitional coupling: discovery runtime currently imports registration API helpers."
 
     - from: probe-runtime
       to: platform-runtime
